# habit_tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
habit_tracker/: cli.py  db.py  streaks.py
tests/: test_db.py  test_streaks.py
